Спринт 8.Устранены замечания базовые замечания